--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
 	<div style = "text-align:center;position:relative;top:40px;">
-		<font style = "font-family:楷体; font-size:40pt;"> 智能信息处理实验室</font>
+		<font style = "font-family:楷体; font-size:40pt;"> 智能信息处理</font>
 	</div>
 
 
